--- a/projects/angular-ngrx-material-starter/src/app/app/app.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/app/app.component.html
@@ -29,8 +29,7 @@
             <img [src]="logo" /></span>
           <span routerLink="" class="branding spacer center d-none d-sm-inline d-md-none"><img [src]="logo" /> {{
             'anms.title.short' | translate }}</span>
-          <span routerLink="" class="branding spacer d-none d-md-inline"><img [src]="logo" /> {{ 'anms.title.long' | translate
-            }}</span>
+          <span routerLink="" class="branding spacer d-none d-md-inline"><img [src]="logo" /> Procurement Portal</span>
 
           <span class="d-none d-md-inline">
             <button mat-button class="nav-button" *ngFor="let item of navigation" [routerLink]="[item.link]"
@@ -55,9 +54,9 @@
             </button>
           </mat-menu>
 
-          <button mat-icon-button routerLink="settings" class="d-none d-sm-inline">
+          <!--<button mat-icon-button routerLink="settings" class="d-none d-sm-inline">
             <fa-icon icon="cog"></fa-icon>
-          </button>
+          </button>-->
 
           <a [matTooltip]="'anms.header.github' | translate"
              matTooltipPosition="before"
@@ -68,13 +67,13 @@
             <fa-icon [icon]="['fab','github']"></fa-icon>
           </a>
 
-          <span *ngIf="language$ | async as language">
+          <!--<span *ngIf="language$ | async as language">
             <mat-select [ngModel]="language" (selectionChange)="onLanguageSelect($event)">
               <mat-option *ngFor="let l of languages" [value]="l">
                 {{ l.toUpperCase() }}
               </mat-option>
             </mat-select>
-          </span>
+          </span>-->
         </mat-toolbar>
       </div>
 
